--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: cpp
 compiler: gcc
 before_install:
-  - sudo apt-get update -qq
+  - sudo apt-get update
   - sudo apt-get install -y libsdl1.2-dev
-script: make && make testing
+script: make
+after_install:
+  - make testing
